<resources>
    <string name="app_name">PlainText</string>
    <string name="descricaoInicial">Digite suas credenciais para continuar</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="digiteLogin">Digite seu login</string>
    <string name="salvarLogin">Salvar informação de login</string>
    <string name="entrar">Entrar</string>
    <string name="testimonial">\"The most secure password manager\"</string>
    <string name="testimonialAuthors">Alice and Bob</string>
    <string name="salvarLoginDescricao">Salvar informações de login?</string>
    <string name="setup">Configurações</string>
    <string name="about">Sobre</string>
    <string name="sampleList">Olá, aqui ficará a lista de senhas!</string>
    <string name="buttonToAdd">Botão para adicionar senhas</string>
    <string name="usersList">Lista de usuários</string>
</resources>